# rag-assignment

./: .gitignore  Questions.xlsx  Questions_with_reference_answers.csv  RAG_Assignment.docx  RAG_Assignment_Colab.ipynb  README.md  pyproject.toml  rag_answers_results.xlsx  requirements.txt
src/rag_assignment/: __init__.py  cli.py  config.py  deps.py  evaluate.py  ingest.py  rag.py
